Layout issues

--- a/components/Layout.module.css
+++ b/components/Layout.module.css
@@ -1,5 +1,5 @@
 .main {
-  margin: 3rem auto;
+  margin-top: 20px;
+  padding: 0 5%;
   width: 90%;
-  max-width: 40rem;
 }
